--- a/programs/ramp/Cargo.toml
+++ b/programs/ramp/Cargo.toml
@@ -14,9 +14,8 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.29.0"
-anchor-spl = { version = "0.29.0", features = ["stake"] }
-spl-stake-pool = "1.0.0"
+anchor-spl = { version = "0.29.0", features = [ "stake" ] }
+spl-stake-pool = { version = "1.0.0", features = [ "no-entrypoint" ] }
