--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@metaplex-foundation/beet": "^0.7.2",
+    "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/solita": "^0.20.1",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "^1.91.9"
