--- a/programs/ramp/Cargo.toml
+++ b/programs/ramp/Cargo.toml
@@ -19,3 +19,4 @@ no-log-ix-name = []
 anchor-lang = "0.29.0"
 anchor-spl = { version = "0.29.0", features = [ "stake" ] }
 spl-stake-pool = { version = "1.0.0", features = [ "no-entrypoint" ] }
+mpl-token-metadata = { version = "4.1.2" }
