--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "types": ["mocha", "chai"],
     "typeRoots": ["./node_modules/@types"],
     "lib": ["es2015"],
+    "strict": true,
     "module": "commonjs",
     "target": "es6",
     "esModuleInterop": true
